# wahoo-results

./: .coveragerc  .gitignore  .markdownlint.yml  .mdl-style.rb  .mergify.yml  .pre-commit-config.yaml  .pylintrc  .readthedocs.yml  .sonarcloud.properties  Changelog.md  Contributing.md  Pipfile  README.md  ReleaseChecklist.md  about.py  analytics.py  autotest.py  bounded_text.py  build.py  color_button.py  config.py  dolphin_do4.py  dolphin_do4_test.py  dolphin_result_do4.py  dolphin_result_do4_test.py  fonts.py  fonts_test.py  heatdata.py  heatdata_test.py  imagecast.py  imagecast_types.py  layouts.py  main_window.py  make-doc.bat  make-exe.bat  make-venv.bat  manual.py  mkdocs.yml  model.py  newmain.py  (+36 more)
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md  dependabot.yml  mergify.yml  renovate.json5  yamllint-config.yml
.github/workflows/: add-to-project.yml  capilot-setup-steps.yml  copilot-setup-steps.yml  dependencies.yml  publish-receiver.yml  test.yml  website.yml
Overpass_Mono/: OFL.txt
chromecast-receiver/: receiver.html
docs/: cc-compat.md  chromecast-compat.rst  common.rst  conf.py  configuration.md  configuration.rst  download.md  download.rst  faq.md  faq.rst  in-action.md  index.md  index.rst  quickstart.md  quickstart.rst  requirements.txt  robots.txt
docs/_templates/: layout.html
docs/blog/: .authors.yml  index.md
docs/blog/posts/: 2023-09-30-testpost.md
docs/blog/posts/history-of-wahoo-results/: index.md
docs/blog/posts/welcome-to-the-new-site/: index.md
docs/chromecast-receiver/: receiver.html
docs/javascripts/: clarity.js
docs/overrides/partials/: social.html
docs/stylesheets/: extra.css
docs/tutorials/: basic-theme.rst  index.rst  simple-bg.rst
raceinfo/: __init__.py  colorado_scb.py  colorado_scb_test.py  dolphin_csv.py  dolphin_csv_test.py  dolphin_do4.py  dolphin_do4_test.py  dolphin_event.py  dolphin_event_test.py  dolphin_test.py  eventprocessor.py  generic.py  generic_test.py  heat.py  heat_test.py  heatdata.py  heatdata_test.py  lane.py  lane_test.py  nameformat.py  resolver.py  resolver_test.py  startlist.py  time.py  times.py  times_test.py  timingsystem.py
raceinfo/testdata-dolphin/: 008-000-001A-0010.do4  008-000-00F0001.do3  008-000-00F0002.do3  008-000-00F0003.do3  008-000-00F0004.do3  008-000-00F0005.do3  008-000-00F0006.do3  008-000-00F0007.do3  008-000-00F0008.do3  008-000-00F0009.do3  008-000-00F0010.do3  008-000-00F0011.do3  008-000-00F0012.do3  008-001-001A-0001.do4  008-001-002A-0002.do4  008-002-001A-0003.do4  008-003-001A-0004.do4  008-004-001A-0005.do4  008-005-001A-0006.do4  008-006-001A-0007.do4  008-007-001P-0008.do4  008-008-001F-0009.do4  008-010-001A-0011.do4  008-010-002A-0012.do4  008_Event_10_Heat_1_Race_11_10_16_2024_20_19.csv  008_Event_10_Heat_1_Race_11_10_16_2024_20_19.txt  008_Event_10_Heat_1_Race_11_10_16_2024_20_19.xml  008_Event_10_Heat_2_Race_12_10_16_2024_20_20.csv  008_Event_10_Heat_2_Race_12_10_16_2024_20_20.txt  008_Event_10_Heat_2_Race_12_10_16_2024_20_20.xml  008_Event_1_Heat_1_Race_1_10_16_2024_20_2.csv  008_Event_1_Heat_1_Race_1_10_16_2024_20_2.txt  008_Event_1_Heat_1_Race_1_10_16_2024_20_2.xml  008_Event_1_Heat_2_Race_2_10_16_2024_20_2.csv  008_Event_1_Heat_2_Race_2_10_16_2024_20_2.txt  008_Event_1_Heat_2_Race_2_10_16_2024_20_2.xml  008_Event_2_Heat_1_Race_3_10_16_2024_20_5.csv  008_Event_2_Heat_1_Race_3_10_16_2024_20_5.txt  008_Event_2_Heat_1_Race_3_10_16_2024_20_5.xml  008_Event_3_Heat_1_Race_4_10_16_2024_20_7.csv  (+51 more)
raceinfo/testdata-generic/: 005-021-03F0002.gen  024-102-06F0008.gen  024-103-01F0019.gen  README.md
testdata/: 001-003-001A-0003.do4  001-011-001A-0015.do4  001-011-002A-0016.do4  001-038-001A-0068.do4  001-038-002A-0069.do4  001-042-001A-0077.do4  010-209-001A-0053.do4  010-214-001A-0068.do4  010-223-001A-0018.do4  010-223-002A-0019.do4  010-223-003A-0020.do4  010-223-004A-0021.do4  010-223-005A-0022.do4  046-111-001A-0046.do4  046-111-002A-0047.do4  046-111-003A-0048.do4  046-111-004A-0049.do4  046-151-001A-0147.do4  046-151-002A-0148.do4  046-151-003A-0149.do4  AthleteRoster.csv  E003.scb  E011.scb  E038.scb  E099.scb  E102.scb  E103.scb  E111.scb  E151.scb  E209.scb  E214.scb  E223.scb  testdata.mdb
tests/: ui_freeze_test.py
