[project]
name = "wahoo-results"
version = "0.1.0"
description = "A scoreboard for swimming using results from a CTS Dolphin timing system"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fonttools==4.60.1",
    "ipinfo==5.3.0",
    "pillow==12.0.0",
    "pychromecast==14.0.9",
    "pyinstaller==6.16.0",
    "requests==2.32.5",
    "segment-analytics-python==2.3.4",
    "semver==3.0.4",
    "sentry-sdk==2.45.0",
    "watchdog==6.0.0",
]

[dependency-groups]
dev = [
    { include-group = "docs" },
    "pyright==1.1.407",
    "pytest==9.0.1",
    "pytest-cov==7.0.0",
]
docs = [
    "mdx-truly-sane-lists==1.3",
    "mkdocs-glightbox==0.5.2",
    "mkdocs-macros-plugin==1.5.0",
    "mkdocs-material==9.7.0",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_lines = [
    # Have to re-enable the standard pragma
    "pragma: no cover",
    # Don't complain about missing debug-only code:
    "def __repr__",
    "if self.debug",
    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",
    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:",
    # Don't complain about abstract methods, they aren't run:
    "@(abc.)?abstractmethod",
]

ignore_errors = true
omit = ["*_test.py", "build.py"]
skip_empty = true

[tool.coverage.run]
branch = true  # Enable branch coverage
source = ["."] # Source code directories

[tool.coverage.xml]
output = "coverage.xml"

[tool.pyright]
# https://microsoft.github.io/pyright/#/configuration
deprecateTypingAliases = true
enableReachabilityAnalysis = true
include = ["."]
reportUnnecessaryTypeIgnoreComment = true
typeCheckingMode = "strict"
useLibraryCodeForTypes = true
verboseOutput = true

[tool.pytest.ini_options]
addopts = [
    "-rA -q",
    "--doctest-modules",
    "--ignore=build.py",        # Don't check build.py
    "--cov=.",
    "--cov-config=.coveragerc",
    "--cov-report=html",
    "--cov-report=term",
    "--cov-report=xml",
]

filterwarnings = [
    "error",
    # ttkwidgets has invalid escape sequences in its docstrings
    'ignore:invalid escape sequence:',
    # ttkwidgets uses "is" with a literal
    'ignore:"is" with a literal. Did you mean "==":',
    # Need updates to pytest-pylint for the following:
    "ignore:Using the __implements__ inheritance pattern for BaseReporter is no longer supported.",
]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
# https://docs.astral.sh/ruff/rules/
select = [
    "D",    # Pydocstyle
    "E101", # Pycodestyle: mixed spaces and tabs
    "E4",   # Pycodestyle: Imports
    "E7",   # Pycodestyle: misc
    "E9",   # Pycodestyle: error
    "F",    # Pyflakes
    "I",    # isort
    "PL",   # pylint
    "RUF",  # Ruff-specific
]
pydocstyle.convention = "pep257"

[tool.uv.pip]
universal = true
